# predictive-maintenance-digital-twin

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml
models/: advanced_training_results.json  improved_training_results.json  training_results.json
scripts/: train_advanced_models.py  train_all_models.py  train_improved_models.py  train_models.py
src/: __init__.py
src/api/: predict.py
src/data/: __init__.py  dataset.py  feature_engineering.py  ingestion.py  load_cmapss.py  make_labels.py  preprocessing.py
src/digital_twin/: __init__.py  predictor.py  simulator.py  state.py
src/evaluation/: __init__.py  explainability.py  metrics.py
src/features/: rolling_features.py
src/models/: __init__.py  advanced_rul.py  base.py  cnn.py  ensemble.py  eval_all.py  eval_rf.py  gru.py  lstm.py  lstm_improved.py  train_all.py  train_baseline_rf.py  train_rf.py  transformer.py
src/training/: __init__.py  trainer.py
web/: .gitignore  README.md  package-lock.json  package.json
web/app/: globals.css  layout.jsx  page.jsx
web/app/api/comparison/: route.js
web/app/api/engines/: route.js
web/app/api/predict/: route.js
web/app/comparison/: page.jsx
web/app/prediction/: page.jsx
web/app/simulation/: page.jsx
