[project]
name = "predictive-maintenance-digital-twin"
version = "0.1.0"
description = "A digital twin ML system for predictive maintenance using NASA C-MAPSS turbofan engine data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    
    # Experiment tracking
    "mlflow>=2.9.0",
    
    # Explainability
    "shap>=0.43.0",
    
    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

